[package]
name = "vatsim_pilot_glance"
version = "0.4.1"
edition = "2021"
authors = ["Celeo <mattboulanger@fastmail.com>"]
description = "TUI to show nearby VATISM network times"
readme = "README.md"
homepage = "https://github.com/celeo/vatsim_pilot_glance"
repository = "https://github.com/celeo/vatsim_pilot_glance"
license = "MIT OR Apache-2.0"
exclude = [".github"]
keywords = ["vatsim"]
categories = []

[dependencies]
anyhow = "1.0.58"
chrono = "0.4.19"
clap = { version = "3.2.16", features = ["derive"] }
crossterm = "0.24.0"
futures = "0.3.21"
num-format = "0.4.0"
once_cell = "1.13.0"
tokio = { version = "1.20.1", features = ["full"] }
tui = "0.18.0"
vatsim_utils = "0.3.2"
webbrowser = "0.7.1"

[dev-dependencies]
mockito = "0.31.0"
