[package]
name = "vatsim_pilot_glance"
version = "0.5.0"
edition = "2021"
authors = ["Celeo <mattboulanger@fastmail.com>"]
description = "TUI to show nearby VATISM network times"
readme = "README.md"
homepage = "https://github.com/celeo/vatsim_pilot_glance"
repository = "https://github.com/celeo/vatsim_pilot_glance"
license = "MIT OR Apache-2.0"
exclude = [".github"]
keywords = ["vatsim"]
categories = []

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
crossterm = "0.27.0"
futures = "0.3.28"
num-format = "0.4.4"
once_cell = "1.18.0"
tokio = { version = "1.32.0", features = ["full"] }
tui = "0.19.0"
vatsim_utils = "0.3.3"
webbrowser = "0.8.11"

[dev-dependencies]
mockito = "1.2.0"
